[gd_scene load_steps=5 format=3 uid="uid://1vopnpjabqx4"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_u5xyi"]
[ext_resource type="Texture2D" uid="uid://dfiv7dc7mvqug" path="res://Assets_aula1/Botoes/Play.png" id="2_ciuuh"]
[ext_resource type="Texture2D" uid="uid://mtquu3jyoo0j" path="res://Assets_aula1/Botoes/Restart.png" id="3_40cyv"]
[ext_resource type="Texture2D" uid="uid://bdp0sqhiwmftf" path="res://Assets_aula1/Botoes/Close.png" id="4_yue5l"]

[node name="Pause_Menu" type="CanvasLayer"]
script = ExtResource("1_u5xyi")

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
light_mask = 3
visibility_layer = 3
offset_left = 20.0
offset_right = 1153.0
offset_bottom = 648.0
color = Color(0.212502, 3.00817e-09, 0.0891589, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -556.0
offset_top = -66.0
offset_right = 577.0
offset_bottom = 582.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="pause_bt" type="Button" parent="VBoxContainer"]
process_mode = 2
layout_mode = 2
size_flags_vertical = 0
text = "PAUSE
"
icon = ExtResource("2_ciuuh")
expand_icon = true

[node name="reiniciar_bt" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 4
text = "RESTART
"
icon = ExtResource("3_40cyv")

[node name="quit_bt" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "SAIR
"
icon = ExtResource("4_yue5l")
expand_icon = true

[connection signal="pressed" from="VBoxContainer/pause_bt" to="." method="_on_pause_bt_pressed"]
[connection signal="pressed" from="VBoxContainer/reiniciar_bt" to="." method="_on_reiniciar_bt_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_bt" to="." method="_on_quit_bt_pressed"]
